hphp/hack/test/typecheck/reactive/rx_if_arg_impl1.php.like_types.exp
File "rx_if_arg_impl1.php", line 25, characters 3-7:
Cannot invoke conditionally reactive function in reactive context, because at least one reactivity condition is not met. (Typing[4237])
File "rx_if_arg_impl1.php", line 23, characters 16-16:
Argument type must be a subtype of \RxA, now ~T.
File "rx_if_arg_impl1.php", line 10, characters 10-10:
This is the function declaration
